Updated Forge and Parchment versions. Added data tags for insulation, waterproof and radiation resistance for armor recipes. Added visuals for thirst effect. Added HUD elements for water and wetness. Added Wetness capability. Added thirst effect. Improved water drinking from hands so it works in a large variety of situations, including drinking from a single water block. Temperature for both body and environment are very close to release quality. Need more gameplay testing for balance of attributes, but really good now.

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,27 @@ minecraft {
                 }
             }
         }
+
+        data {
+            workingDirectory project.file('run')
+            arg "-mixin.config=${modid}.mixins.json"
+            property 'forge.logging.console.level', 'debug'
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
+            args '--mod', "${modid}",
+                    '--all',
+                    '--output', file('src/generated/resources/'),
+                    '--existing', file('src/main/resources/'),
+                    '--existing', file('src/generated/resources')
+
+            mods {
+                homeostatic {
+                    source sourceSets.main
+                }
+            }
+        }
+
     }    
 }
 
@@ -81,6 +102,7 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
 
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+    implementation fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
 }
 
 jar {
