--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,11 @@ mod_author=wendall911
 cf_release_type=beta
 minecraft_version=1.18.2
 minecraft_short_version=1.18
-forge_version=40.1.20
+forge_version=40.1.31
 forge_version_range=[40,)
 loader_version=[40,)
-mappings_version=2022.03.13-1.18.2
+mappings_version=2022.05.22-1.18.2
 mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3693808
+simpletextoverlay_version=3787267
