--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3693808
 simpletextoverlay_version=3787267
+jei_version=9.5.+
