Add generated resources to build.

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,10 @@ minecraft {
     }    
 }
 
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
+}
+
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
