--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 mod_name=Homeostatic
 modid=homeostatic
-mod_version=1.0.0.3
-last_mod_version=1.0.0.2
+mod_version=2.0.0.0
+last_mod_version=1.0.0.3
 mod_author=wendall911
 cf_release_type=beta
-minecraft_version=1.18.2
-minecraft_short_version=1.18
-forge_version=40.1.51
-forge_version_range=[40,)
-loader_version=[40,)
-mappings_version=2022.05.22-1.18.2
+minecraft_version=1.19
+minecraft_short_version=1.19
+forge_version=41.0.38
+forge_version_range=[41,)
+loader_version=[41,)
+mappings_version=1.18.2-2022.06.19
 mappings_channel=parchment
 mixin_version=0.8.5
-serene_seasons_version=3693808
-simpletextoverlay_version=3787267
-jei_version=9.5.+
+serene_seasons_version=3838336
+simpletextoverlay_version=3844393
+jei_version=11.0.0.206
