Change update url for 1.19

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ license="MIT"
   description="A mod about body temperature and moisture. Achieving homeostasis after a little trial and error."
   version="${version}"
   displayURL="https://github.com/wendall911/Homeostatic"
-  updateJSONURL="https://raw.githubusercontent.com/wendall911/Homeostatic/1.19.x/files/updates.json"
+  updateJSONURL="https://raw.githubusercontent.com/wendall911/Homeostatic/1.19/files/updates.json"
   authors="wendall911"
   credits="ashar42"
   logoFile="logo.png"
