--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,8 @@ dependencies {
 
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+    implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
+    implementation fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
 }
 
 jar {
