--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 mod_name=Homeostatic
 modid=homeostatic
-mod_version=2.1.0.0
-last_mod_version=2.0.0.3
+mod_version=2.2.0.0
+last_mod_version=2.1.0.0
 mod_author=wendall911
 cf_release_type=beta
 minecraft_version=1.19
 minecraft_short_version=1.19
-forge_version=41.0.38
+forge_version=41.0.63
 forge_version_range=[41,)
 loader_version=[41,)
 mappings_version=1.18.2-2022.06.19
@@ -14,4 +14,6 @@ mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3838336
 simpletextoverlay_version=3844393
+bop_version=3852436
+terrablender_version=3852202
 jei_version=11.0.0.206
