--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 mod_name=Homeostatic
 modid=homeostatic
-mod_version=1.1.0.0
-last_mod_version=1.0.0.5
+mod_version=1.1.0.1
+last_mod_version=1.1.0.0
 mod_author=wendall911
-cf_release_type=beta
+cf_release_type=release
 minecraft_version=1.18.2
 minecraft_short_version=1.18
 forge_version=40.1.51
