--- a/gradle.properties
+++ b/gradle.properties
@@ -6,14 +6,15 @@ mod_author=wendall911
 cf_release_type=beta
 minecraft_version=1.19
 minecraft_short_version=1.19
-forge_version=41.0.63
+minecraft_version_range=[1.19,)
+forge_version=41.1.0
 forge_version_range=[41,)
 loader_version=[41,)
-mappings_version=1.18.2-2022.06.19
+mappings_version=1.18.2-2022.08.02
 mappings_channel=parchment
 mixin_version=0.8.5
-serene_seasons_version=3838336
-simpletextoverlay_version=3844393
-bop_version=3852436
-terrablender_version=3852202
-jei_version=11.0.0.206
+serene_seasons_version=3871432
+simpletextoverlay_version=3919979
+bop_version=3871422
+terrablender_version=3868697
+jei_version=11.1.1.239
