--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -24,6 +24,6 @@ license="MIT"
 [[dependencies.homeostatic]]
     modId="minecraft"
     mandatory=true
-    versionRange="${minecraft_version}"
+    versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
