--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,18 @@ mod_version=2.2.0.2
 last_mod_version=2.2.0.1
 mod_author=wendall911
 cf_release_type=beta
-minecraft_version=1.19
+cf_versions=1.19,1.19.1
+minecraft_version=1.19.1
 minecraft_short_version=1.19
 minecraft_version_range=[1.19,)
-forge_version=41.1.0
+forge_version=42.0.3
 forge_version_range=[41,)
 loader_version=[41,)
 mappings_version=1.18.2-2022.08.02
 mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3871432
-simpletextoverlay_version=3919979
-bop_version=3871422
-terrablender_version=3868697
-jei_version=11.1.1.239
+simpletextoverlay_version=3920035
+bop_version=3912144
+terrablender_version=3910738
+jei_version=11.2.0.241
