--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ modid=homeostatic
 mod_version=2.3.0.0
 last_mod_version=2.2.0.2
 mod_author=wendall911
-cf_release_type=beta
-cf_versions=1.19,1.19.1
-minecraft_version=1.19.1
+cf_release_type=release
+cf_versions=1.19,1.19.1,1.19.2
+minecraft_version=1.19.2
 minecraft_short_version=1.19
 minecraft_version_range=[1.19,)
-forge_version=42.0.3
+forge_version=43.0.2
 forge_version_range=[41,)
 loader_version=[41,)
 mappings_version=1.18.2-2022.08.02
 mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3871432
-simpletextoverlay_version=3920035
-bop_version=3912144
-terrablender_version=3910738
-jei_version=11.2.0.241
+simpletextoverlay_version=3924890
+bop_version=3923822
+terrablender_version=3920544
+jei_version=11.2.0.244
