--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ dependencies {
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
     implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
+    implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
     runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
 }
 
@@ -212,6 +213,7 @@ curseforge {
                     optionalLibrary 'simpletextoverlay'
                     optionalLibrary 'serene-seasons'
                     optionalLibrary 'biomes-o-plenty'
+                    optionalLibrary 'oh-the-biomes-youll-go'
                 }
             }
         }
