--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 mod_name=Homeostatic
 modid=homeostatic
-mod_version=2.3.0.1
-last_mod_version=2.3.0.0
+mod_version=2.4.0.0
+last_mod_version=2.3.0.1
 mod_author=wendall911
 cf_release_type=release
 cf_versions=1.19,1.19.1,1.19.2
 minecraft_version=1.19.2
 minecraft_short_version=1.19
 minecraft_version_range=[1.19,)
-forge_version=43.0.8
+forge_version=43.0.11
 forge_version_range=[41,)
 loader_version=[41,)
 mappings_version=1.18.2-2022.08.02
@@ -18,4 +18,5 @@ serene_seasons_version=3871433
 simpletextoverlay_version=3924890
 bop_version=3923822
 terrablender_version=3920544
+byg_version=3920704
 jei_version=11.2.0.246
