Change jar file naming to reflect all 1.19 versions are supported.

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ repositories {
 }
 
 group = 'com.github.wendall911.homeostatic'
-version = "${minecraft_version}-${mod_version}"
+version = "${minecraft_short_version}-${minecraft_version}-${mod_version}"
 archivesBaseName = "${mod_name}"
 def modid = "${modid}"
 
