Update Forge, mappings and mod support versions.

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,15 +8,15 @@ cf_versions=1.19,1.19.1,1.19.2
 minecraft_version=1.19.2
 minecraft_short_version=1.19
 minecraft_version_range=[1.19,)
-forge_version=43.0.11
+forge_version=43.1.2
 forge_version_range=[41,)
 loader_version=[41,)
-mappings_version=1.18.2-2022.08.02
+mappings_version=2022.08.21
 mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3871433
 simpletextoverlay_version=3924890
-bop_version=3923822
-terrablender_version=3920544
-byg_version=3920704
+bop_version=3927362
+terrablender_version=3926355
+byg_version=3947710
 jei_version=11.2.0.246
