--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,8 @@ dependencies {
 
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+    //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
+    //implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
 }
 
 jar {
@@ -206,6 +208,7 @@ curseforge {
                     optionalLibrary 'jei'
                     optionalLibrary 'simpletextoverlay'
                     optionalLibrary 'serene-seasons'
+                    optionalLibrary 'oh-the-biomes-youll-go'
                 }
             }
         }
