--- a/build.gradle
+++ b/build.gradle
@@ -115,8 +115,11 @@ dependencies {
 
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+    runtimeOnly fg.deobf("curse.maven:crafttweaker-239197:${crafttweaker_version}")
     //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
-    //implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
+    //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
+    //implementation fg.deobf("curse.maven:botania-225643:3755269")
+    //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947782")
 }
 
 jar {
@@ -209,6 +212,7 @@ curseforge {
                     optionalLibrary 'simpletextoverlay'
                     optionalLibrary 'serene-seasons'
                     optionalLibrary 'oh-the-biomes-youll-go'
+                    optionalLibrary 'croptopia'
                 }
             }
         }
