--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,6 @@ mixin_version=0.8.5
 serene_seasons_version=3693808
 simpletextoverlay_version=3918106
 jei_version=9.7.+
+crafttweaker_version=3918220
 terrablender_version=3816497
 byg_version=3956521
