--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
     //implementation fg.deobf("curse.maven:botania-225643:3755269")
     //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947782")
+    //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3834150")
 }
 
 jar {
@@ -213,6 +214,7 @@ curseforge {
                     optionalLibrary 'serene-seasons'
                     optionalLibrary 'oh-the-biomes-youll-go'
                     optionalLibrary 'croptopia'
+                    optionalLibrary 'farmers-delight'
                 }
             }
         }
