--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,8 @@ dependencies {
     implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
     implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
     runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
+    //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947784")
+    //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3916069")
 }
 
 jar {
@@ -214,6 +216,8 @@ curseforge {
                     optionalLibrary 'serene-seasons'
                     optionalLibrary 'biomes-o-plenty'
                     optionalLibrary 'oh-the-biomes-youll-go'
+                    optionalLibrary 'croptopia'
+                    optionalLibrary 'farmers-delight'
                 }
             }
         }
