--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947782")
     //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3834150")
     //runtimeOnly fg.deobf("curse.maven:xerca-341575:3937763")
+    //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3831598")
 }
 
 jar {
@@ -217,6 +218,7 @@ curseforge {
                     optionalLibrary 'croptopia'
                     optionalLibrary 'farmers-delight'
                     optionalLibrary 'xercamod'
+                    optionalLibrary 'kitteh6660s-morecraft'
                 }
             }
         }
