--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,8 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3916069")
     //runtimeOnly fg.deobf("curse.maven:xerca-341575:3947222")
     //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3874944")
+    //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
+    //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
 }
 
 jar {
@@ -222,6 +224,7 @@ curseforge {
                     optionalLibrary 'farmers-delight'
                     optionalLibrary 'xercamod'
                     optionalLibrary 'kitteh6660s-morecraft'
+                    optionalLibrary 'sophisticated-backpacks'
                 }
             }
         }
