--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3831598")
     //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
     //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
+    //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939725")
 }
 
 jar {
@@ -222,6 +223,7 @@ curseforge {
                     optionalLibrary 'xercamod'
                     optionalLibrary 'kitteh6660s-morecraft'
                     optionalLibrary 'sophisticated-backpacks'
+                    optionalLibrary 'ecologics'
                 }
             }
         }
