--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,7 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3874944")
     //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
     //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
+    //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
 }
 
 jar {
@@ -225,6 +226,7 @@ curseforge {
                     optionalLibrary 'xercamod'
                     optionalLibrary 'kitteh6660s-morecraft'
                     optionalLibrary 'sophisticated-backpacks'
+                    optionalLibrary 'ecologics'
                 }
             }
         }
