Add some testing mods to build.

--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,10 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:crafttweaker-239197:${crafttweaker_version}")
     //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
     //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
-    //implementation fg.deobf("curse.maven:botania-225643:3755269")
+    //runtimeOnly fg.deobf("curse.maven:bop-220318:3759237")
+    //runtimeOnly fg.deobf("curse.maven:botania-225643:3936568")
+    //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3846086")
+    //runtimeOnly fg.deobf("curse.maven:curios-309927:3841948")
     //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947782")
     //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3834150")
     //runtimeOnly fg.deobf("curse.maven:xerca-341575:3937763")
