--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,9 @@ dependencies {
     implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
     implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
     runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
+    //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
+    //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
+    //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
     //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947784")
     //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3916069")
     //runtimeOnly fg.deobf("curse.maven:xerca-341575:3947222")
@@ -125,6 +128,9 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
     //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
     //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
+    //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
+    //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
+    //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
 }
 
 jar {
@@ -227,6 +233,8 @@ curseforge {
                     optionalLibrary 'kitteh6660s-morecraft'
                     optionalLibrary 'sophisticated-backpacks'
                     optionalLibrary 'ecologics'
+                    optionalLibrary 'ars-nouveau'
+                    optionalLibrary 'sprout'
                 }
             }
         }
