--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ repositories {
 }
 
 group = 'com.github.wendall911.homeostatic'
-version = "${minecraft_short_version}-${minecraft_version}-${mod_version}"
+version = "${minecraft_short_version}+-${mod_version}"
 archivesBaseName = "${mod_name}"
 def modid = "${modid}"
 
@@ -171,7 +171,7 @@ def updates = tasks.register("generateUpdates", Copy) {
 
     it.from("./files/templates/") {
         include 'updates.json'
-        expand 'mod_version': mod_version
+        expand 'version': version
     }
 
     it.into 'files/'
