--- a/build.gradle
+++ b/build.gradle
@@ -131,6 +131,8 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
     //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
     //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
+    //runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
+    //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:4012312")
 }
 
 jar {
@@ -235,6 +237,7 @@ curseforge {
                     optionalLibrary 'ecologics'
                     optionalLibrary 'ars-nouveau'
                     optionalLibrary 'sprout'
+                    optionalLibrary 'create-cafe'
                 }
             }
         }
