--- a/build.gradle
+++ b/build.gradle
@@ -132,6 +132,9 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950251")
     //runtimeOnly fg.deobf("curse.maven:sprout-565856:3788680")
     //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950802")
+    //runtimeOnly fg.deobf("curse.maven:create-328085:4007544")
+    //runtimeOnly fg.deobf("curse.maven:flywheel-486392:3934664")
+    //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:3995985")
 }
 
 jar {
