Update build to add Fruit Trees as optional dependency.

--- a/build.gradle
+++ b/build.gradle
@@ -236,6 +236,7 @@ curseforge {
                     optionalLibrary 'ars-nouveau'
                     optionalLibrary 'sprout'
                     optionalLibrary 'create-cafe'
+                    optionalLibrary 'fruit-trees'
                 }
             }
         }
