--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,7 @@ dependencies {
 
     compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}:api")
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
+    compileOnly fg.deobf("curse.maven:create-328085:4007544")
 
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
@@ -240,6 +241,7 @@ curseforge {
                     optionalLibrary 'create-cafe'
                     optionalLibrary 'fruit-trees'
                     optionalLibrary 'leave-my-bars-alone'
+                    optionalLibrary 'create'
                 }
             }
         }
