Update build and add purified water mixing to be a full bucket.

--- a/build.gradle
+++ b/build.gradle
@@ -117,26 +117,31 @@ dependencies {
     implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
     compileOnly fg.deobf("curse.maven:create-328085:4011414")
 
-    runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
-    //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
-    //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
-    //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
-    //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947784")
-    //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3916069")
-    //runtimeOnly fg.deobf("curse.maven:xerca-341575:3947222")
-    //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3874944")
-    //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
-    //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
-    //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
-    //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
-    //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
-    //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
-    //runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
-    //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:4012312")
-    //runtimeOnly fg.deobf("curse.maven:kiwi-303657:3974084")
-    //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:3990227")
-    //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4017925")
-    //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4023020")
+    if (System.getenv('DATA_GEN') != null) {
+        runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
+    }
+    else {
+        runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+        //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
+        //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
+        //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
+        //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947784")
+        //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3916069")
+        //runtimeOnly fg.deobf("curse.maven:xerca-341575:3947222")
+        //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3874944")
+        //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
+        //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
+        //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
+        //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
+        //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
+        //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
+        //runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
+        //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:4012312")
+        //runtimeOnly fg.deobf("curse.maven:kiwi-303657:3974084")
+        //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:3990227")
+        //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4017925")
+        //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4023020")
+    }
 }
 
 jar {
