--- a/build.gradle
+++ b/build.gradle
@@ -121,7 +121,7 @@ dependencies {
     else {
         runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
-        runtimeOnly fg.deobf("curse.maven:crafttweaker-239197:${crafttweaker_version}")
+        //runtimeOnly fg.deobf("curse.maven:crafttweaker-239197:${crafttweaker_version}")
         //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
         //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
         //runtimeOnly fg.deobf("curse.maven:bop-220318:3759237")
