Add dependencies for Patchouli book.

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ bop_version=4032228
 terrablender_version=4013816
 byg_version=4027228
 jei_version=11.3.0.262
+patchouli_version=1.19.2-77
+patchouli_provider_version=1.19-1.0.7-Snapshot.2
