--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,11 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven {
+        // Patchouli && Provider
+        name = "Blame Jared"
+        url = "https://maven.blamejared.com"
+    }
 }
 
 group = 'com.github.wendall911.homeostatic'
@@ -116,12 +121,15 @@ dependencies {
     implementation fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
     implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
     compileOnly fg.deobf("curse.maven:create-328085:4011414")
+    implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
 
     if (System.getenv('DATA_GEN') != null) {
         runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
     }
     else {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+        runtimeOnly fg.deobf("curse.maven:configured-457570:3947885")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
         //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
         //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
