--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ jei_version=9.7.+
 crafttweaker_version=3971901
 terrablender_version=3816497
 byg_version=3956521
+patchouli_version=1.18.2-71.1
+patchouli_provider_version=1.18.2-1.0.6-Snapshot.4
