--- a/build.gradle
+++ b/build.gradle
@@ -255,6 +255,7 @@ curseforge {
                     optionalLibrary 'fruit-trees'
                     optionalLibrary 'leave-my-bars-alone'
                     optionalLibrary 'create'
+                    optionalLibrary 'patchouli'
                 }
             }
         }
