--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ repositories {
         name = "Blame Jared"
         url = "https://maven.blamejared.com"
     }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 group = 'com.github.wendall911.homeostatic'
@@ -119,13 +122,13 @@ dependencies {
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
     implementation fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
-    implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
-    compileOnly fg.deobf("curse.maven:create-328085:4011414")
+    compileOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
+    //compileOnly fg.deobf("curse.maven:create-328085:4550987")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
 
     if (System.getenv('DATA_GEN') != null) {
-        runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
+        //runtimeOnly fg.deobf("curse.maven:create-328085:4550987")
     }
     else {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
@@ -143,7 +146,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
         //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
         //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
-        //runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
+        //runtimeOnly fg.deobf("curse.maven:create-328085:4550987")
         //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:4012312")
         //runtimeOnly fg.deobf("curse.maven:kiwi-303657:3974084")
         //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:3990227")
