--- a/gradle.properties
+++ b/gradle.properties
@@ -4,21 +4,21 @@ mod_version=2.6.3.0
 last_mod_version=2.6.2.0
 mod_author=wendall911
 cf_release_type=release
-cf_versions=1.19,1.19.1,1.19.2
-minecraft_version=1.19.2
+cf_versions=1.19.3
+minecraft_version=1.19.3
 minecraft_short_version=1.19
-minecraft_version_range=[1.19,)
-forge_version=43.1.52
-forge_version_range=[41,)
-loader_version=[41,)
-mappings_version=2022.11.06
+minecraft_version_range=[1.19.3,1.19.4)
+forge_version=44.1.23
+forge_version_range=[44,)
+loader_version=[44,)
+mappings_version=2023.03.12
 mappings_channel=parchment
 mixin_version=0.8.5
-serene_seasons_version=3871433
-simpletextoverlay_version=3995717
-bop_version=4032228
-terrablender_version=4013816
+serene_seasons_version=4446493
+simpletextoverlay_version=4571936
+bop_version=4430073
+terrablender_version=4420865
 byg_version=4027228
-jei_version=11.3.0.262
-patchouli_version=1.19.2-77
-patchouli_provider_version=1.19-1.0.7-Snapshot.2
+jei_version=12.4.0.22
+patchouli_version=1.19.3-78
+patchouli_provider_version=1.19.3-1.0.8-Snapshot.3
