Fix biome temperatures for 1.19.3 build. New mixin strategy that maintains a separate registry for temperatures. Added debugging and analysis for comparing version updates.

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,9 @@ serene_seasons_version=4446493
 simpletextoverlay_version=4571936
 bop_version=4430073
 terrablender_version=4420865
-byg_version=4027228
+byg_version=4586054
+corgilib_version=4581378
+geckolib_version=4451001
 jei_version=12.4.0.22
 patchouli_version=1.19.3-78
 patchouli_provider_version=1.19.3-1.0.8-Snapshot.3
