--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,9 @@ dependencies {
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
     implementation fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
-    compileOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
+    implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
+    runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
+    runtimeOnly fg.deobf("curse.maven:geckolib-388172:${geckolib_version}")
     //compileOnly fg.deobf("curse.maven:create-328085:4550987")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
@@ -143,7 +145,6 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
         //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
         //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
-        //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
         //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
         //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
         //runtimeOnly fg.deobf("curse.maven:create-328085:4550987")
@@ -172,6 +173,13 @@ jar {
 
 mixin {
     add sourceSets.main, "${modid}.refmap.json"
+
+    config "${modid}.mixins.json"
+    debug = true
+    debug.verbose = true
+    debug.export = true
+    checks = true
+    checks.interfaces = true
 }
 
 def replaceResources = tasks.register("replaceResources", Copy) {
