--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ repositories {
 }
 
 group = 'com.github.wendall911.homeostatic'
-version = "${minecraft_short_version}+-${mod_version}"
+version = "${minecraft_version}-${mod_version}"
 archivesBaseName = "${mod_name}"
 def modid = "${modid}"
 
