--- a/gradle.properties
+++ b/gradle.properties
@@ -4,23 +4,23 @@ mod_version=2.7.0.1
 last_mod_version=2.7.0.0
 mod_author=wendall911
 cf_release_type=release
-cf_versions=1.19.3
-minecraft_version=1.19.3
+cf_versions=1.19.4
+minecraft_version=1.19.4
 minecraft_short_version=1.19
-minecraft_version_range=[1.19.3,1.19.4)
-forge_version=44.1.23
-forge_version_range=[44,)
-loader_version=[44,)
-mappings_version=2023.03.12
+minecraft_version_range=[1.19.4,1.20)
+forge_version=45.1.0
+forge_version_range=[45,)
+loader_version=[45,)
+mappings_version=1.19.3-2023.03.12
 mappings_channel=parchment
 mixin_version=0.8.5
-serene_seasons_version=4446493
-simpletextoverlay_version=4571936
-bop_version=4430073
-terrablender_version=4420865
-byg_version=4586054
-corgilib_version=4581378
-geckolib_version=4451001
-jei_version=12.4.0.22
-patchouli_version=1.19.3-78
-patchouli_provider_version=1.19.3-1.0.8-Snapshot.3
+serene_seasons_version=4577600
+simpletextoverlay_version=4572065
+bop_version=4573241
+terrablender_version=4567879
+byg_version=4602199
+corgilib_version=4583678
+geckolib_version=4.2
+jei_version=13.1.0.13
+patchouli_version=1.19.4-79
+patchouli_provider_version=1.19.4-1.0.9-Snapshot.4
