--- a/build.gradle
+++ b/build.gradle
@@ -129,34 +129,33 @@ dependencies {
     implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
     runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
     runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
-    //compileOnly fg.deobf("curse.maven:create-328085:4550987")
+    //compileOnly fg.deobf("curse.maven:create-328085:${create_version}")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}-FORGE")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
 
     if (System.getenv('DATA_GEN') != null) {
-        //runtimeOnly fg.deobf("curse.maven:create-328085:4550987")
+        //runtimeOnly fg.deobf("curse.maven:create-328085:${create_version}")
     }
     else {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
         runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
-        //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
-        //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
-        //runtimeOnly fg.deobf("curse.maven:croptopia-415438:3947784")
-        //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:3916069")
-        //runtimeOnly fg.deobf("curse.maven:xerca-341575:3947222")
-        //runtimeOnly fg.deobf("curse.maven:morecraft-59648:3874944")
-        //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
-        //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
-        //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
-        //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
-        //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
-        //runtimeOnly fg.deobf("curse.maven:create-328085:4550987")
-        //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:4012312")
-        //runtimeOnly fg.deobf("curse.maven:kiwi-303657:3974084")
-        //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:3990227")
-        //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4017925")
-        //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4023020")
+        //runtimeOnly fg.deobf("curse.maven:curios-309927:4523020")
+        //runtimeOnly fg.deobf("curse.maven:croptopia-415438:4512807")
+        //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:???")
+        //runtimeOnly fg.deobf("curse.maven:xerca-341575:???")
+        //runtimeOnly fg.deobf("curse.maven:morecraft-59648:???")
+        //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:???")
+        //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:???")
+        //runtimeOnly fg.deobf("curse.maven:ecologics-570463:???")
+        //runtimeOnly fg.deobf("curse.maven:sprout-565856:???")
+        //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:???")
+        //runtimeOnly fg.deobf("curse.maven:create-328085:${create_version}")
+        //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:???")
+        //runtimeOnly fg.deobf("curse.maven:kiwi-303657:???")
+        //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:???")
+        //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4582313")
+        //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4555067")
     }
 }
 
