--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 mod_name=Homeostatic
 modid=homeostatic
-mod_version=2.7.0.1
-last_mod_version=2.7.0.0
+mod_version=2.8.0.0
+last_mod_version=2.7.0.1
 mod_author=wendall911
 cf_release_type=release
 cf_versions=1.19.4
@@ -24,3 +24,4 @@ geckolib_version=4.2
 jei_version=13.1.0.13
 patchouli_version=1.19.4-79
 patchouli_provider_version=1.19.4-1.0.9-Snapshot.4
+create_version=???
