--- a/gradle.properties
+++ b/gradle.properties
@@ -4,24 +4,24 @@ mod_version=2.8.0.0
 last_mod_version=2.7.0.1
 mod_author=wendall911
 cf_release_type=release
-cf_versions=1.19.4
-minecraft_version=1.19.4
-minecraft_short_version=1.19
-minecraft_version_range=[1.19.4,1.20)
-forge_version=45.1.0
-forge_version_range=[45,)
-loader_version=[45,)
-mappings_version=1.19.3-2023.03.12
+cf_versions=1.20.1
+minecraft_version=1.20.1
+minecraft_short_version=1.20
+minecraft_version_range=[1.20,1.20.2)
+forge_version=47.0.35
+forge_version_range=[46.0.0,)
+loader_version=[46,)
+mappings_version=2023.06.26
 mappings_channel=parchment
 mixin_version=0.8.5
-serene_seasons_version=4577600
-simpletextoverlay_version=4572065
-bop_version=4573241
-terrablender_version=4567879
-byg_version=4602199
-corgilib_version=4583678
+serene_seasons_version=4611122
+simpletextoverlay_version=4618486
+bop_version=4617260
+terrablender_version=4608122
+byg_version=???
+corgilib_version=4583906
 geckolib_version=4.2
-jei_version=13.1.0.13
-patchouli_version=1.19.4-79
-patchouli_provider_version=1.19.4-1.0.9-Snapshot.4
+jei_version=15.2.0.22
+patchouli_version=1.20.1-80
+patchouli_provider_version=1.20.1-1.0.9-Snapshot.1
 create_version=???
