--- a/build.gradle
+++ b/build.gradle
@@ -58,9 +58,6 @@ repositories {
         name = "Geckolib"
         url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
     }
-    flatDir {
-        dirs 'libs'
-    }
 }
 
 group = 'com.github.wendall911.homeostatic'
@@ -126,11 +123,12 @@ dependencies {
     implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
     implementation fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
-    implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
-    runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
-    runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
+    //implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
+    compileOnly fileTree(dir: 'libs', include: '*.jar')
+    //runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
+    //runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
     //compileOnly fg.deobf("curse.maven:create-328085:${create_version}")
-    implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}-FORGE")
+    implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}-FORGE-SNAPSHOT")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
 
     if (System.getenv('DATA_GEN') != null) {
@@ -138,7 +136,7 @@ dependencies {
     }
     else {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
-        runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
+        //runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
         //runtimeOnly fg.deobf("curse.maven:curios-309927:4523020")
         //runtimeOnly fg.deobf("curse.maven:croptopia-415438:4512807")
