--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ cf_versions=1.20.1
 minecraft_version=1.20.1
 minecraft_short_version=1.20
 minecraft_version_range=[1.20,1.20.2)
-forge_version=47.0.35
+forge_version=47.0.45
 forge_version_range=[46.0.0,)
-loader_version=[46,)
+loader_version_range=[46,)
 mappings_version=2023.06.26
 mappings_channel=parchment
 mixin_version=0.8.5
