--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ geckolib_version=4.2
 jei_version=15.2.0.22
 patchouli_version=1.20.1-80
 patchouli_provider_version=1.20.1-1.0.9-Snapshot.1
-create_version=???
+create_version=4626108
