Ensure Archwood Forest is registered correctly.

--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     //runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
     //runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
     compileOnly fg.deobf("curse.maven:create-328085:${create_version}")
+    compileOnly fg.deobf("curse.maven:arsnouveau-401955:${ars_version}")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}-FORGE-SNAPSHOT")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
 
@@ -116,7 +117,7 @@ dependencies {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
         //runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
-        //runtimeOnly fg.deobf("curse.maven:curios-309927:4523020")
+        //runtimeOnly fg.deobf("curse.maven:curios-309927:4583413")
         //runtimeOnly fg.deobf("curse.maven:croptopia-415438:4512807")
         //runtimeOnly fg.deobf("curse.maven:farmers_delight-398521:???")
         //runtimeOnly fg.deobf("curse.maven:xerca-341575:???")
@@ -125,7 +126,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:???")
         //runtimeOnly fg.deobf("curse.maven:ecologics-570463:???")
         //runtimeOnly fg.deobf("curse.maven:sprout-565856:???")
-        //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:???")
+        //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:${ars_version}")
         //runtimeOnly fg.deobf("curse.maven:create-328085:${create_version}")
         //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:???")
         //runtimeOnly fg.deobf("curse.maven:kiwi-303657:???")
