--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ jei_version=15.2.0.22
 patchouli_version=1.20.1-80
 patchouli_provider_version=1.20.1-1.0.9-Snapshot.1
 create_version=4626108
+ars_version=4641979
