--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:create_cafe-542235:3995985")
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:3804332")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:3671258")
+        //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:3680208")
     }
 }
 
@@ -256,6 +257,7 @@ curseforge {
                     optionalLibrary 'leave-my-bars-alone'
                     optionalLibrary 'create'
                     optionalLibrary 'patchouli'
+                    optionalLibrary 'scuba-gear'
                 }
             }
         }
