--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:3990227")
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4017925")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4023020")
+        runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:3901488")
     }
 }
 
@@ -259,6 +260,7 @@ curseforge {
                     optionalLibrary 'leave-my-bars-alone'
                     optionalLibrary 'create'
                     optionalLibrary 'patchouli'
+                    optionalLibrary 'scuba-gear'
                 }
             }
         }
