--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:???")
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4582313")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4555067")
-        runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:4442000")
+        //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:4442000")
     }
 }
 
