--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:???")
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4582313")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4555067")
+        //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:4593711")
     }
 }
 
@@ -262,6 +263,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('leave-my-bars-alone')
         mainFile.addOptional('create')
         mainFile.addOptional('patchouli')
+        mainFile.addOptional('scuba-gear')
     }
 }
 
