--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 mod_name=Homeostatic
 modid=homeostatic
-mod_version=1.3.5.0
-last_mod_version=1.3.4.0
+mod_version=1.3.5.1
+last_mod_version=1.3.5.0
 mod_author=wendall911
 cf_release_type=release
 minecraft_version=1.18.2
 minecraft_short_version=1.18
+release_versions=1.18.2
 forge_version=40.1.81
 forge_version_range=[40,)
 loader_version=[40,)
